--- a/index.html
+++ b/index.html
@@ -311,17 +311,18 @@
 <span><details>
   <summary>Statistiques: films vu par pays</summary>
   (n'inclut pas les films américains et français, vus en grand nombre)
-  <pre style="font-size: 20px;line-height: 32px;">█████████████████████████████████████████████████ 49 🇬🇧
-███████████████████████████████████ 35 🇯🇵
+  <pre style="font-size: 20px;line-height: 32px;">██████████████████████████████████████████████████ 50 🇬🇧
+████████████████████████████████████ 36 🇯🇵
 ██████████████████ 18 🇩🇪
 █████████████████ 17 🇪🇸
 ███████████████ 15 🇮🇹
 █████████████ 13 🇰🇷
 ████████ 8 🇨🇳 🇲🇽 🇷🇺
-███████ 7 🇸🇪
-██████ 6 🇩🇰 🇭🇰 🇮🇷
-█████ 5 🇦🇺 🇮🇳 🇹🇷
-███ 3 🇧🇪 🇨🇱 🇮🇪 🇮🇸 🇳🇿 🇵🇱 🇿🇦
+███████ 7 🇩🇰 🇮🇳 🇸🇪
+██████ 6 🇭🇰 🇮🇷
+█████ 5 🇦🇺 🇹🇷
+████ 4 🇮🇸
+███ 3 🇧🇪 🇨🇱 🇮🇪 🇳🇿 🇵🇱 🇿🇦
 ██ 2 🇦🇷 🇧🇷 🇨🇴 🇮🇱 🇹🇭
 █ 1 🇦🇹 🇧🇹 🇨🇦 🇨🇿 🇫🇮 🇬🇪 🇬🇷 🇮🇩 🇰🇭 🇰🇿 🇱🇧 🇳🇬 🇳🇴 🇵🇪 🇷🇴 🇷🇸 🇸🇬 🇸🇳 🇺🇾</pre>
 </details>
@@ -373,7 +374,7 @@
 1983: ████████ 8
 1984: ██████████ 10
 1985: ███████████ 11
-1986: ███████████ 11
+1986: ████████████ 12
 1987: █████████ 9
 1988: ██████████████ 14
 1989: ███████ 7
@@ -382,7 +383,7 @@
 1992: █████████████ 13
 1993: ███████████████ 15
 1994: ███████████████ 15
-1995: ██████████████████ 18
+1995: ███████████████████ 19
 1996: █████████ 9
 1997: █████████████████████ 21
 1998: ███████████ 11
@@ -405,15 +406,15 @@
 2015: ██████████████████████ 22
 2016: ████████████████████████████ 28
 2017: ████████████████████████████ 28
-2018: ███████████████████████████████████████ 39
-2019: ██████████████████████████████████ 34
-2020: ██████████████████ 18
+2018: █████████████████████████████████████████ 41
+2019: ███████████████████████████████████ 35
+2020: ███████████████████ 19
 2021: ████████████████████████████ 28
-2022: █████████████████████████████████ 33
+2022: ██████████████████████████████████ 34
 2023: █████████████████████████████████████████████████████████████████████ 69
-2024: ████████ 8
+2024: █████████████ 13
 
-total: 1101</pre>
+total: 1113</pre>
 </details>
 </span><h2 class="heading-element">Mon top 15 films préférés</h2>
 <a id="user-content-mon-top-15-films-préférés" class="anchor" aria-label="Permalink: Mon top 15 films préférés" href="#mon-top-15-films-pr%C3%A9f%C3%A9r%C3%A9s"><span aria-hidden="true" class="octicon octicon-link"></span></a>
@@ -1087,6 +1088,7 @@ total: 1101</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8aNGnEsvLBldNvaBkfYkGGgZDhe.jpg");' onmouseleave='setPosterPath("");'>'Round Midnight (Bertrand Tavernier) 🎷 #jazz : belle musique mais pas vraiment d'histoire</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8gZWMhJHRvaXdXsNhERtqNHYpH3.jpg");' onmouseleave='setPosterPath("");'>The Fly (David Cronenberg) 🪰 #nanar #so-bad-its-good</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//4IyxoUQ7BB5kcSd7gASe2dTyWu7.jpg");' onmouseleave='setPosterPath("");'>Down by Law (Jim Jarmusch)</li>
+<li>bof: Blue Velvet (David Lynch)</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/12e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar" rel="noopener" target="_blank">Césars 12</a></p>
 <ul>
@@ -1349,6 +1351,7 @@ total: 1101</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//rylQhe0Z2KUKZQYhQLGrug0SV4i.jpg");' onmouseleave='setPosterPath("");'>N'oublie pas que tu vas mourir (Xavier Beauvois) 🎗️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//tsmwnxi8hGXQTNVqBRCAVsfeGON.jpg");' onmouseleave='setPosterPath("");'>Le Hussard sur le toit (JP Rappeneau) (vu ?)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//tjHn19RpFMBmzQx58SBO40nLvhu.jpg");' onmouseleave='setPosterPath("");'>Le bonheur est dans le pré (vu ?)</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8c5KU6nKl58toN3bq539enPpN2O.jpg");' onmouseleave='setPosterPath("");'>Les trois frères (les inconnus)</li>
 <li>bof: La Cérémonie (Claude Chabrol)</li>
 </ul>
 <div class="markdown-heading">
@@ -1795,7 +1798,7 @@ total: 1101</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//x5csgIwwoMzZYsFkV9c5A18DGIA.jpg");' onmouseleave='setPosterPath("");'>London River (Rachid Bouchareb) <a href="https://www.telerama.fr/cinema/films/london-river,389614.php" rel="noopener" target="_blank">📰</a> (vu ?)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//uluhlXubGu1VxU63X9VHCLWDAYP.jpg");' onmouseleave='setPosterPath("");'>The Hangover (Very Bad Trip) #comédie</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//ezFQaPf4cOEfsl39Me0gSV29d7V.jpg");' onmouseleave='setPosterPath("");'>Public Enemies (Michael Mann, Johnny Depp) : ok sans plus</li>
-<li>bof: Invictus (Clint Eastwood) 🇿🇦 🏉, A Serious Man (frères Coen), Mr. Nobody, Valhalla Rising (Nicolas Winding Refn), Dogtooth 🇬🇷, The Boat That Rocked (Good Morning England) 🇬🇧, Avatar, The Limits of Control (Jim Jarmusch), <del>Enter the Void (Gaspar Noé)</del>
+<li>bof: Invictus (Clint Eastwood) 🇿🇦 🏉, A Serious Man (frères Coen), Mr. Nobody, Valhalla Rising (Nicolas Winding Refn), Dogtooth (Yórgos Lánthimos) 🇬🇷, The Boat That Rocked (Good Morning England) 🇬🇧, Avatar, The Limits of Control (Jim Jarmusch), <del>Enter the Void (Gaspar Noé)</del>
 </li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/35e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 35</a></p>
@@ -2132,7 +2135,7 @@ total: 1101</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//i91mfvFcPPlaegcbOyjGgiWfZzh.jpg");' onmouseleave='setPosterPath("");'>First Man (Damien Chazelle) #biopic</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//4YRplSk6BhH6PRuE9gfyw9byUJ6.jpg");' onmouseleave='setPosterPath("");'>Annihilation (Natalie Portman) #sf</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//peTl1V04E9ppvhgvNmSX0r2ALqO.jpg");' onmouseleave='setPosterPath("");'>Sorry to Bother You</li>
-<li>bof: Une affaire de famille (Shoplifters) (Koreeda) 🇯🇵 🌿, A Star Is Born, Call Me by Your Name (Timothée Chalamet) #coming-of-age, The Wild Pear Tree 🇹🇷, BlacKkKlansman (Spike Lee) ✊🏾, City of Lies (Johnny Depp), Les Oiseaux de Passage 🇨🇴, Green Book ✊🏾, Night Comes On ☀️, The Spy Gone North 🇰🇷, Manta Ray, Roma (Alfonso Cuarón) 🇲🇽, Widows (Steve McQueen), Ready Player One (Steven Spielberg)</li>
+<li>bof: Une affaire de famille (Shoplifters) (Koreeda) 🇯🇵 🌿, A Star Is Born, Call Me by Your Name (Timothée Chalamet) #coming-of-age, The Wild Pear Tree 🇹🇷, BlacKkKlansman (Spike Lee) ✊🏾, The Guilty 🇩🇰, Woman at War 🇮🇸, City of Lies (Johnny Depp), Les Oiseaux de Passage 🇨🇴, Green Book ✊🏾, Night Comes On ☀️, The Spy Gone North 🇰🇷, Manta Ray, Roma (Alfonso Cuarón) 🇲🇽, Widows (Steve McQueen), Ready Player One (Steven Spielberg)</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/44e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 44</a></p>
 <ul>
@@ -2165,7 +2168,7 @@ total: 1101</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//xjW2wgrC2ey0APDELP6NMD8tAq7.jpg");' onmouseleave='setPosterPath("");'>White Boy Rick (Matthew McConaughey) <a href="https://www.telerama.fr/cinema/films/white-boy-rick,n5091865.php" rel="noopener" target="_blank">📰</a>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//yV6edeSb1ykiNpJ1ekRz8GPhENr.jpg");' onmouseleave='setPosterPath("");'>Dark Waters (Todd Haynes, Mark Ruffalo)</li>
-<li>bof: Parasite (Bong Joon-ho) 🇰🇷 4🏆 🌿, Sorry We Missed You (Ken Loach) 🇬🇧, Little Women (Greta Gerwig), The Gangster The Cop The Devil 🇰🇷 #thriller, Once Upon a Time in Hollywood (Tarentino), The Death of Dick Long, Uncut Gems, Òlòtūré 🇳🇬, The Farewell</li>
+<li>bof: Parasite (Bong Joon-ho) 🇰🇷 4🏆 🌿, Sorry We Missed You (Ken Loach) 🇬🇧, Little Women (Greta Gerwig), The Gangster The Cop The Devil 🇰🇷 #thriller, Once Upon a Time in Hollywood (Tarentino), The Death of Dick Long, Uncut Gems, Òlòtūré 🇳🇬, First Love (Takashi Miike) 🇯🇵, The Farewell</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/45e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 45</a></p>
 <ul>
@@ -2195,6 +2198,7 @@ total: 1101</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//pr3bEQ517uMb5loLvjFQi8uLAsp.jpg");' onmouseleave='setPosterPath("");'>The Father (Anthony Hopkins) 🇬🇧</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//sshNnwmQLk720iBQ0dZg3GVGKfK.jpg");' onmouseleave='setPosterPath("");'>Riders of Justice (Retfærdighedens ryttere) (Mads Mikkelsen) 🇩🇰 #thriller</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//yf5IuMW6GHghu39kxA0oFx7Bxmj.jpg");' onmouseleave='setPosterPath("");'>Palm Springs (Andy Samberg) #romcom</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//mMICdcRBxiEUUpdAFCYRezE3Dy5.jpg");' onmouseleave='setPosterPath("");'>Words on Bathroom Walls #coming-of-age</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//oLQlUUSlI669r1bgQ7AlnjcrrvC.jpg");' onmouseleave='setPosterPath("");'>Possessor (Brandon Cronenberg) ☀️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//k50gYFDfpAyxcIGjWjnXAaOM81e.jpg");' onmouseleave='setPosterPath("");'>Waiting for the Barbarians (Johnny Depp, Robert Pattinson)</li>
 <li>bof:
@@ -2268,6 +2272,7 @@ total: 1101</pre>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//k9eLozCgCed5FGTSdHu0bBElAV8.jpg");' onmouseleave='setPosterPath("");'>Triangle of Sadness (Ruben Östlund) 🌿 <a href="https://www.telerama.fr/cinema/films/sans-filtre-1-213225533.php" rel="noopener" target="_blank">📰</a> #satire</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//6GCZtTcuUUXOY2IndZu9qHmu2gB.jpg");' onmouseleave='setPosterPath("");'>As Bestas 🇪🇸 : "un thriller à l’hyperréalisme terrifiant" (télérama)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//xL75xZlykQzf1WImw60HG8yEjk2.jpg");' onmouseleave='setPosterPath("");'>Small, Slow But Steady (La Beauté du Geste) 🇯🇵</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//zUJcp0rpUqp2GSk7t9jvAiZsXtM.jpg");' onmouseleave='setPosterPath("");'>Living 🇬🇧</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//3SHL9l0gCACJExESoYUP4Rlr7tL.jpg");' onmouseleave='setPosterPath("");'>La Femme de Tchaikovski 🇷🇺 <a href="https://www.telerama.fr/cinema/films/la-femme-de-tchaikovski-1-217335282.php" rel="noopener" target="_blank">📰</a>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//rSq6cq0LCcbro10jbEaPTEb3WmW.jpg");' onmouseleave='setPosterPath("");'>Meurtres sans ordonnance (The Good Nurse)</li>
@@ -2417,6 +2422,7 @@ total: 1101</pre>
 </ul>
 </li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//sh7Rg8Er3tFcN9BpKIPOMvALgZd.jpg");' onmouseleave='setPosterPath("");'>Civil War</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//t9Rd5Gw9e9FqHdX2Si5ZnEusdoa.jpg");' onmouseleave='setPosterPath("");'>Santosh 🇮🇳</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aBkqu7EddWK7qmY4grL4I6edx2h.jpg");' onmouseleave='setPosterPath("");'>The Fall Guy (Ryan Gosling) 🍿
 <ul>
 <li>
@@ -2428,12 +2434,16 @@ total: 1101</pre>
 </li>
 </ul>
 </li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8mmpltkcG9areafsQHXaURedno3.jpg");' onmouseleave='setPosterPath("");'>Kinds of Kindness (Yórgos Lánthimos)</li>
 <li>bof: Challengers, Love Lies Bleeding, Mad Max: Furiosa, <del>Monkey Man</del>
 </li>
 </ul>
 <p>Français:</p>
 <ul>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//gW1IvkPEdfGQLePZDIvCLhrVOYi.jpg");' onmouseleave='setPosterPath("");'>La Récréation de juillet ❤️</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//8J9SuYq4ydVgnFwh9pz1yobLE0T.jpg");' onmouseleave='setPosterPath("");'>Première Affaire ❤️</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//aHRUsFln97FlIdsvYKFT3z5ubYE.jpg");' onmouseleave='setPosterPath("");'>Le Comte de Monte-Cristo (Pierre Niney)</li>
+<li>Les Fantômes</li>
 </ul>
 <p><a href="#sommaire">⬆️ retour sommaire</a></p>
 <div class="markdown-heading">
@@ -2535,7 +2545,7 @@ total: 1101</pre>
 </ul>
 <p><a href="https://loadingartist.com/comic/horror-movie/" rel="noopener" target="_blank">bonus: gag</a></p>
 <ul>
-<li>bof: Don't Breathe (2016), Midsommar (2019) 🇸🇪, Lamb (2021) 🇮🇸, Vermines (2023)</li>
+<li>bof: Don't Breathe (2016), Tumbbad (2018) 🇮🇳, Midsommar (2019) 🇸🇪, Lamb (2021) 🇮🇸, Pearl (2022), Vermines (2023)</li>
 </ul>
 <div class="markdown-heading">
 <h3 class="heading-element" id="aventure-et-divertissement-familial">Aventure et divertissement familial <a href="#top">↑</a>
